--- a/src/pages/crypto-news/crypto-news.html
+++ b/src/pages/crypto-news/crypto-news.html
@@ -1,18 +1,77 @@
-<!--
-  Generated template for the CryptoNewsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>crypto-news</ion-title>
-  </ion-navbar>
-
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>Crypto-News</ion-title>
+    </ion-navbar>
 </ion-header>
 
+<ion-content>
 
-<ion-content padding>
+    <ion-refresher (ionRefresh)="loadCoin($event)">
+        <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles"
+                               refreshingText="Refreshing...">
+        </ion-refresher-content>
+    </ion-refresher>
 
+    <ion-list [virtualScroll]="coinList">
+        <ion-grid class='coin-card' *virtualItem="let coin">
+
+            <ion-row>
+                <ion-col col-2 class='vertical-center'>
+                    <img src="{{coin.urlToImage}}" height="80" width="80">
+                </ion-col>
+                <ion-col col-10>
+                    <ion-row>
+                        <ion-col>
+                            <span class='bold'>Title: </span>
+                            <span>{{ coin.title }}</span>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col>
+                            <span class='bold'>Author: </span>
+                            <span>{{ coin.author }}</span>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col>
+                            <span class="bold">Published At: </span>
+                            <span>{{ coin.publishedAt | date }}</span>
+                        </ion-col>
+                    </ion-row>
+
+                </ion-col>
+
+
+                <!--<ion-col col-6 class='vertical-center'>-->
+                <!--<div>-->
+                <!--&lt;!&ndash;<span class='bold'>{{ coin.symbol }}</span> |&ndash;&gt;-->
+                <!--<span>{{ coin.title }}</span>-->
+                <!--</div>-->
+                <!--</ion-col>-->
+                <!--<ion-col col-4 class='vertical-center'>-->
+                <!--&lt;!&ndash;<span class='bold'>{{ priceHelper.getPriceByCurrency(coinData) }} {{symbol}}</span>&ndash;&gt;-->
+                <!--</ion-col>-->
+            </ion-row>
+
+            <!--<ion-row>-->
+            <!--<ion-col col-4>-->
+            <!--<span>1h: </span>-->
+            <!--<span class='bold' [ngClass]="getPriceColor(coinData.percent_change_1h)">{{ coinData.percent_change_1h }} %</span>-->
+            <!--</ion-col>-->
+            <!--<ion-col col-4>-->
+            <!--<span>24h: </span>-->
+            <!--<span class='bold' [ngClass]="getPriceColor(coinData.percent_change_24h)">{{ coinData.percent_change_24h }} %</span>-->
+            <!--</ion-col>-->
+            <!--<ion-col col-4>-->
+            <!--<span>7d: </span>-->
+            <!--<span class='bold' [ngClass]="getPriceColor(coinData.percent_change_7d)">{{ coinData.percent_change_7d }} %</span>-->
+            <!--</ion-col>-->
+            <!--</ion-row>-->
+
+
+        </ion-grid>
+    </ion-list>
 </ion-content>
