--- a/src/pages/upcoming-coin/upcoming-coin.html
+++ b/src/pages/upcoming-coin/upcoming-coin.html
@@ -1,18 +1,24 @@
-<!--
-  Generated template for the UpcomingCoinPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>upcoming-coin</ion-title>
-  </ion-navbar>
-
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>Upcoming-Coin</ion-title>
+    </ion-navbar>
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content>
+    <!--<ion-searchbar [(ngModel)]="searchText" [showCancelButton]="shouldShowCancel" (ionInput)="onInputSearch($event)"-->
+                   <!--(ionCancel)="onCancel($event)">-->
+    <!--</ion-searchbar>-->
+    <!--<ion-refresher (ionRefresh)="loadCoin($event)">-->
+        <!--<ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles"-->
+                               <!--refreshingText="Refreshing...">-->
+        <!--</ion-refresher-content>-->
+    <!--</ion-refresher>-->
+    <!--<ion-list [virtualScroll]="coinListFiltered">-->
+        <!--<ion-grid class='coin-card' *virtualItem="let coin">-->
+            <!--<coin-card [coinData]='coin'></coin-card>-->
+        <!--</ion-grid>-->
+    <!--</ion-list>-->
 </ion-content>
