--- a/src/pages/converter/converter.html
+++ b/src/pages/converter/converter.html
@@ -5,14 +5,30 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>converter</ion-title>
-  </ion-navbar>
-
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>Crypto-Converter</ion-title>
+    </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
+    <ion-list>
+        <ion-item>
+            <ion-label stacked>1 BTC = {{data.price_usd | currency}}</ion-label>
+        </ion-item>
 
+        <ion-item>
+            <ion-label stacked>BTC Amount</ion-label>
+            <ion-input type="text" (input)="BTCChageValue($event.target.value)" [ngModel]="btcValue"></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label stacked>USD Amount</ion-label>
+            <ion-input type="text" (input)="USDChageValue($event.target.value)" [ngModel]="usdValue"></ion-input>
+        </ion-item>
+
+    </ion-list>
 </ion-content>
